Fix Gap between Menu & App on larger Screens

--- a/My Clipboard/css/layouts/_nav.sass
+++ b/My Clipboard/css/layouts/_nav.sass
@@ -62,4 +62,4 @@ nav
 @media screen and (min-width: 1200px)
     nav
         left: -50%
-        width: 50%
+        width: 50.1%
